--- a/Views/SaDamageRecoup/Index.cshtml
+++ b/Views/SaDamageRecoup/Index.cshtml
@@ -80,7 +80,8 @@
                    { label: 'Product Name',name: 'productName',fixed:true,editable: true,editrules: { required: true,custom:true, custom_func:IsProduct },                                                             
                     editoptions: { value:getProductName(),
                                   dataInit: function(elem) {
-                    curRowId = $('#saDamageRecoup').getGridParam('selrow');        
+                    curRowId = $('#saDamageRecoup').getGridParam('selrow');
+                    $(elem).select();
                     $(elem).autocomplete({source: ProductNameList,autoFocus: true,minLength: 0, select:function (event, ui) {
                     $('#saDamageRecoup').jqGrid('setCell',curRowId,'supplierName', getSupplierNames(ui.item.value));
                     $('input#supplierName').val(getSupplierNames(ui.item.value));
