--- a/Views/SaExciseDuty/Index.cshtml
+++ b/Views/SaExciseDuty/Index.cshtml
@@ -92,7 +92,8 @@
                    { label: 'Product Name',name: 'productName',fixed:true,editable: true,editrules: { required: true,custom:true, custom_func:IsProduct },                                                             
                     editoptions: { 
                                   dataInit: function(elem) {
-                    curRowId = $('#SaExciseDuty').getGridParam('selrow');        
+                    curRowId = $('#SaExciseDuty').getGridParam('selrow');
+                    $(elem).select();
                     $(elem).autocomplete({source: getProductName(),autoFocus: true,minLength: 0, select:function (event, ui) {
                    
                   $('#SaExciseDuty').jqGrid('setCell',curRowId,'supplierName', getSupplierNames(ui.item.value));
@@ -215,13 +216,14 @@
     
     function SaveHeader()
         {
-            header = true;
+            
             console.log($("#date").val());
             var date = $("#date").val();
             var notes = $("#comments").val();
             var locationsDropdown= $("#locationsDropdown").val();
             if(locationsDropdown!=-1)
             {
+                header = true;
             $.ajaxSetup( { "async": false } );
             $.getJSON('SaExciseDuty/CreateHeader?data='+date+'/'+ locationsDropdown+'/'+ notes, function(data) {
                 $("#saCode").val(data);
