--- a/Views/invAdj/Index.cshtml
+++ b/Views/invAdj/Index.cshtml
@@ -80,11 +80,10 @@
                    { label: 'Product Name',name: 'productName',fixed:true,editable: true,editrules: { required: true,custom:true, custom_func:IsProduct },                                                             
                     editoptions: { 
                                   dataInit: function(elem) {
-
+                    
                     curRowId = $('#invAdj').getGridParam('selrow');   
-                   
+                    $(elem).select();
                     //$(elem).val();
-                  // $('#invAdj').jqGrid('setSelection', 'productName');
                     $(elem).autocomplete({source: getProductName(),autoFocus: true,minLength: 0, select:function (event, ui) {
                   $('#invAdj').jqGrid('setCell',curRowId,'supplierName', getSupplierNames(ui.item.value));
                   $('input#supplierName').val(getSupplierNames(ui.item.value));
@@ -103,7 +102,7 @@
                  ], 
                viewrecords: true,
                height: 250,
-               rowNum: 20,
+               rowNum: 10,
                pager: "#jqGridPager",
                editurl: 'InvAdj/Update',              
 
