-Changes for new column comments

--- a/Views/SaStockReceived/Index.cshtml
+++ b/Views/SaStockReceived/Index.cshtml
@@ -36,7 +36,7 @@
 </div>
 <div class="row">
   <div class="col-sm-3">
-        <input style="font-size:10px; border-radius: 0 !important" type="text" class="form-control" placeholder="Product Name:" aria-label="Product Name:" aria-describedby="basic-addon2" id="productName"/>
+        <input style="font-size:10px; border-radius: 0 !important" type="text" class="form-control" placeholder="Supplier:" aria-label="Supplier:" aria-describedby="basic-addon2" id="Supplier:"/>
             </div>
           <div class="col-sm-3">
         <input style="font-size:10px; border-radius: 0 !important" type="text" class="form-control" placeholder="PO:" aria-label="PO:" aria-describedby="basic-addon2" id="purchaseOrder"/>
