--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -26,9 +26,6 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="InvTxSummary" asp-action="Index">Inventory Tx Summary Page</a>
-                        </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Sales</a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -38,6 +35,7 @@
                          <li class="nav-item dropdown">
                                  <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Stock Adjustment</a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                 <a class="dropdown-item" asp-area="" asp-controller="InvTxSummary" asp-action="Index">Adjustment Summary</a>
                                  <a class="dropdown-item" asp-area="" asp-controller="InvAdj" asp-action="Index">Inventory Adjustment</a>
                                  <a class="dropdown-item" asp-area="" asp-controller="SaDamageRecoup" asp-action="Index">Damage/Recoup</a>
                                  <a class="dropdown-item" asp-area="" asp-controller="SaExciseDuty" asp-action="Index">Excise Duty Paid</a>
