--- a/Views/SaRelease/Index.cshtml
+++ b/Views/SaRelease/Index.cshtml
@@ -43,10 +43,11 @@
             <input style="font-size:10px; border-radius: 0 !important" type="text" class="form-control" placeholder="Trans #:" aria-label="Trans #:" aria-describedby="basic-addon2" id="transNumber"/>
         </div>
 
-        <div class="col-sm-3">
+        <div class="col-sm-2">
             <input style="font-size:10px; border-radius: 0 !important" type="text" class="form-control" placeholder="SA Code:" aria-label="SA Code:" aria-describedby="basic-addon2" id="saCode" readonly/>
         </div>
     </div>
+    <div class="col-sm-1"></div>
     <div class="row">
         <div class="col-sm-6">
             <input style="font-size:10px; border-radius: 0 !important" type="text" class="form-control" placeholder="Notes:" aria-label="Notes:" aria-describedby="basic-addon2" id="comments"/>
@@ -128,7 +129,7 @@
 
                  ], 
                viewrecords: true,
-               height: 250,
+               height: 500,
                rowNum: 20,
                pager: "#jqGridPager",
                editurl: 'saRelease/Update',              
